--- a/client/sass/layout/_footer.scss
+++ b/client/sass/layout/_footer.scss
@@ -8,10 +8,13 @@ footer {
 	background-color: rgba(0,0,0, 0.8);
     padding: 20px;
 
-    .project-fund-amount strong {
-  		font-weight: 100;
-  		font-size: 1.5em;
+    .project-fund-amount {
   		word-spacing: 5px;
+    	
+    	strong {
+  			font-weight: 100;
+	  		font-size: 1.5em;
+	  	}
     }
 
 	.project-fund-amount-slider {
